Lastfm: implement fetching tags for entity